# employee-management-system

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/company/: structs.rs
src/employees/: enums.rs  errors.rs  structs.rs
